[package]
name = "mylib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.14.2"
subprocess = "0.2.8"
clap = "3.1.12"
# Procon
itertools = "=0.9.0"
proconio = { version = "=0.3.6", features = ["derive"] }
num-integer = "=0.1.42"
num-traits = "=0.2.11"